--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "hbs": "^4.2.0",
+    "hbs": "^4.2.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
