--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index",
     "dev": "nodemon index.js"
   },
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "hbs": "^4.2.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "jest": "^26.6.3"
   }
 }
